@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.23 2003/10/02 09:55:09 jaco Exp $
+# $Id: CHANGELOG,v 1.24 2003/10/02 11:45:12 jaco Exp $
 
 * Wed, Oct 01, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -64,6 +64,8 @@
         scripts on the initrd image, saving some space
       - Added '--keyboard=<language>' option to override the
         default keyboard layout
+      - Added '--bootmsg<boot.msg>' option to provide a message
+        for the isolinux message display
     [mklivecd.spec]:
       - Synced with contrib spec
       - Ability to auto-generate version info for changelog
